--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -26,6 +26,10 @@
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/screen.css" type="text/css" />
 
+   <link rel="stylesheet" href="/assets/css/nv.d3.css" type="text/css" />
+   <link rel="stylesheet" href="/assets/css/tangle.css" type="text/css" />
+   <link rel="stylesheet" href="/assets/css/TangleKit.css" type="text/css" />
+
 </head>
 <body id="{{ page.section }}">
 <div id="site">
