don't use baseurl in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.baseurl }}assets/cv_mar_2015.pdf">CV</a>
+      <a class="sidebar-nav-item" href="/assets/cv_mar_2015.pdf">CV</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
