fix disqus url in blog template

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -28,7 +28,7 @@
             var disqus_shortname = 'mcogswell'; // Required - Replace '<example>' with your forum shortname
             var disqus_developer = {{ page.disqus_developer }}; // Comment out when the site is live
             var disqus_identifier = "{{ page.disqus_id }}";
-            var disqus_url = "{{ page.url }}";
+            var disqus_url = "{{ url }}{{ page.url }}";
             var disqus_title = "{{ page.title }}";
 
             /* * * DON'T EDIT BELOW THIS LINE * * */
