--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
   </title>
 
   <script type="text/javascript"
+            src="https://code.jquery.com/jquery-2.1.4.min.js">
+  </script>
+  <script type="text/javascript"
             src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 
