don't do jquery stuff for figcaption

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,12 +14,13 @@
     {% endif %}
   </title>
 
+  <!-- don't include these on every page
   <script type="text/javascript"
             src="https://code.jquery.com/jquery-2.1.4.min.js">
   </script>
   <script type="text/javascript"
             src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
+  </script> -->
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
