add cv link to side and update cv

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,7 @@
         {% endif %}
       {% endif %}
     {% endfor %}
+    <a class="sidebar-nav-item" href="{{site.cv_url}}">CV</a>
 
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
