basic refresh finished

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<div class="container">
-<div class="sidebar-item">
+{% comment %}
+<div class="footer">
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
 </div>
-</div>
+{% endcomment %}
