--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,13 +13,17 @@
   <div class="masthead container-fluid">
   <div class="container">
     <div class="navbar-header">
-      <h2 class="masthead-title">
+      <h1 class="masthead-title">
       <a class="navbar-brand" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-      </h2>
+      </h1>
       <small>{{ site.tagline }}</small>
     </div>
+    <a href="{{ site.baseurl }}/" class="navbar-left"><img class="logo img-responsive img-circle" src="/assets/me_small.jpg" alt="Michael"></a>
     <ul class="nav navbar-nav navbar-right">
-        <li role="presentation" class="{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+    {% comment %}
+        This would include a home link but my name does that well enough.
+        <li role="presentation" class="{% if page.url == site.baseurl %} active{% endif %}"><a href="{{ site.baseurl }}">Home</a></li>
+    {% endcomment %}
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
