re-organize math

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+{% if page.use_math %}
+<script type="text/javascript"
+        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+{% endif %}
+
+
 <div class="container content">
     {{ content }}
     {% if page.comments %}
