--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,14 @@
     {% endif %}
   </title>
 
+  <!-- Javascript -->
+  <script src="{{ site.baseurl }}/public/js/anchor.min.js"></script>
+  <script>
+    // put anchors on headers
+    document.addEventListener("DOMContentLoaded", function(event) {
+      anchors.add('.anchor');
+    });
+  </script>
   <!-- don't include these on every page
   <script type="text/javascript"
             src="https://code.jquery.com/jquery-2.1.4.min.js">
