add CV link to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,6 +39,12 @@
       {% endif %}
     {% endfor %}
 
+    {% comment %}
+        Manually added navbar items...
+    {% endcomment %}
+
+          <li role="presentation"><a href="{{site.cv_url}}">CV</a></li>
+
     </ul>
   </div>
   </div>
